# local-ai

./: .gitignore  Caddyfile  Dockerfile.n8n-python  Dockerfile.pydantic-ai  docker-compose.override.private.yml  docker-compose.yml  package-lock.json  package.json  start_services.py
StirlingPDF/extraConfigs/: settings.yml
pydantic/: app.py  database.py  error_log.txt  ingest.py  ingestion.py  main.py  mastertest.py  output.txt  pyproject.toml  requirements.txt  streamlit.sh  test.py
pydantic-ai/: app.py  database.py  error_log.txt  fastapi.sh  main.py  models.py  pyproject.toml  requirements.txt
pydantic-ai/agents/: analysis_agent.py  calculator_agent.py  master_agent.py  press20_agent.py  rag_agent.py  sql_agent.py  web_search_agent.py
pydantic-ai/examples/docling/: file.csv  output.md  output_csv.md  simple.py
pydantic-ai/examples/webcrawl/: adaptive.py  aggregated_summary.md  cold_slugs.md  llm_crawl.py  llm_scrape.py  search.py  search_and_scrap.py  simple_crawl.py
pydantic-ai/old/: basic-agent.py  calculator_agent.py  file-watchdog.py  models.py  press20_agent.py
pydantic-ai/old/bak/: main.py.bak
pydantic-ai/utils/: markdown.py
pydantic/agents/: __init__.py  calculator_agent.py  master_agent.py  press20_agent.py  rag_agent.py
pydantic/bak/: agents.py.bak  app.py.bak
pydantic/docling/: output_xlsx.md
pydantic/examples/docling/: file.docx  output_spi.md
pydantic/old/: app.py  basic-agent.py  database.py  main.py  master_agent.py  rag_agent.py
pydantic/old/bak/: database.py.bak  main.py.bak.bak
searxng/: limiter.toml
