[project]
name = "pydantic-ai"
version = "0.1.0"
description = "Pydantic AI and streamlit implementation of UI and AI for local H&H Model "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncclient>=0.0.1",
    "crawl4ai>=0.7.1",
    "ddgs>=9.2.3",
    "markdown>=3.8.2",
    "streamlit>=1.47.0",
    "watchdog>=6.0.0",
]
